--- a/templates/title.html
+++ b/templates/title.html
@@ -46,19 +46,8 @@
 <body>
   <div class="container card text-center">
   <div class="card-body">
-    <h4>مشروع تخرج</h4>
-    <br>
-    <h3>عمل الطالبة : أميرة السيد السيد بسيوني ابوهنطش</h3>
-    <br>
-    <h3>عمل الطالبة : الاء احمد فرج علما</h3>
-    <br>
-    <h3>الفرقة : الرابعة</h3>
-    <br>
-    <h3>شعبة : معلم الحاسب الألي</h3>
-    <br>
-    <h3>تحت اشراف : د/ أشرف البرادعي</h3>
-    <br>
-    <br>
+    <h4>University attendance and departure system using QR Code</h4>
+    
     <br>
     <a href="{% url "home:home" %}" class="btn btn-primary butt">Go to Project</a>
   </div>
